[workspace]
resolver = "3"
members = [
    "library/macros",
    "library/sbi-rt",
    "library/sbi-spec",
    "library/sbi-testing",
    "library/rustsbi",
    "library/riscv-aia",
    "library/riscv-cove",
    "library/riscv-cove-rt",
    "library/penglai",
    "library/pmpm",
    "prototyper/prototyper",
    "prototyper/bench-kernel",
    "prototyper/test-kernel",
    "xtask",
]
default-members = [
    "library/macros",
    "library/sbi-rt",
    "library/sbi-spec",
    "library/rustsbi",
    "library/riscv-aia",
    "library/riscv-cove",
    "library/penglai",
    "library/pmpm"
]

[workspace.package]
edition = "2024"
license = "MulanPSL-2.0 OR MIT"
repository = "https://github.com/rustsbi/rustsbi"

# 添加panic配置
[workspace.dependencies]

# 添加profile配置
[profile.dev]
opt-level = "z" 

[profile.release]
debug = true
lto = true          # 链接时优化
panic = "abort"     # 减少panic处理代码


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
